# pipelines

./: .gitignore  Dockerfile  README.md  entrypoint.sh  prefect.yaml  pyproject.toml  repomix-output.xml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: build_docker.yaml  cd.yaml  cd_staging.yaml  ci_cd.yml  code-tree-analysis.yaml  dbt-checks.yaml  lint.yaml
.github/workflows/scripts/: code_tree_analysis.py  register_flows.py
docs/: arquitetura_cicd.md
k8s/production/: arcgis-deployment.yaml
k8s/staging/: arcgis-deployment.yaml
pipeline/: constants.py  flows.py  pipelines.yaml  utils.py
pipelines/: constants.py  tasks.py
pipelines/acolherio/: constants.py  flow.py  flows.py  tasks.py
pipelines/arcgis/: constants.py  data_sources.yaml  flows.py  pipelines.yaml  tasks.py  utils.py
pipelines/arcgis/abordagem/: flow.py  flows.py
pipelines/arcgis/cartao_primeira_infancia_carioca/: flows.py
pipelines/arcgis/controle-cas/: flows.py
pipelines/arcgis/controle_cas/: flows.py
pipelines/arcgis/cras_cas_poligonos/: flows.py
pipelines/arcgis/equipamento/: flows.py
pipelines/arcgis/equipamentos/: flows.py
pipelines/arcgis/gestao_vagas/: flows.py
pipelines/arcgis/limite_bairros_25/: flows.py
pipelines/arcgis/pipeline_primeira_infancia_carioca_raw_teste/: flows.py
pipelines/arcgis/primeira_infancia_carioca/: flows.py  tasks.py
pipelines/bolsa_familia/: constants.py  flows.py  flows_new.py  tasks.py  utils.py
pipelines/bolsa_familia/bolsa_familia/: __init__.py  flows.py  tasks.py
pipelines/utils/: settings.py  settings_new.py
queries/: .user.yml  ARCHITECTURE.md  dbt_project.yml  package-lock.yml  profiles.yml  refatoracao-arquitetura-acolherio.md
queries/macros/: calc_idade.sql  clean_name.sql  padronizacao_nomes.sql  tratamento_duplicatas_cluster.sql
queries/macros/acolherio/: map_violacao_direito.sql  mapa_colunas_categoria.sql
queries/models/bolsa_familia/: folha.sql  int_bolsa_familia_parsed.sql  schema.yml  sources.yml
queries/models/dashboard_acolherio/: acolhimentos.sql  atendimentos.sql  contas_associadas.sql  familias_bolsa_familia_mes_atual.sql  familias_bpc_mes_atual.sql  familias_crianca_trab_infantil.sql  familias_vitimas_violencias_nova_paefi.sql  lista_unidades.sql  paefi_mes_atual.sql  relatorio_contas_associadas.sql  relatorio_geral.sql  rma_creas_mes_11.sql  schema.yml  tipo_beneficio.sql  tipo_deficiencia_tratada.sql  violacao_direito.sql
queries/models/dashboard_acolherio/mart/: dim_atendimento_compartilhado.sql  dim_cbo.sql  dim_profissionais.sql  dim_tipo_atendimento.sql  dim_unidades.sql  dim_usuarios.sql  fact_atendimentos.sql  fact_atendimentos.yml  fact_profissional_cbo.sql
queries/models/dashboard_acolherio/relatorios/: relatorio_atendimentos.sql  relatorio_atendimentos_no_row_number.sql
queries/models/dashboard_acolherio/staging/: stg_atendimentos_familias.sql  stg_atendimentos_usuarios.sql  stg_cbo.sql  stg_cidadao_pac_acolherio.sql  stg_cidadao_pac_acolherio_acolherio.yml  stg_contas_operadores.sql  stg_contas_operadores.yml  stg_dashboard_acolherio_source.yml  stg_gh_prof_ocup.sql  stg_membros_familia_acolherio.sql  stg_pac_dados_acolherio.sql  stg_pacientes_sm.yml  stg_pacientes_sm_acolherio.sql  stg_pacientes_sm_acolherio.yml  stg_profissionais.sql  stg_unidades.sql
queries/models/dashboard_arcgis/: abordagem.sql  abordagem_ficha.sql  abordagem_repeat.sql  gestao_vagas.sql  schema.yml
queries/models/dashboard_arcgis/staging/: abordagem_ficha.sql  abordagem_repeat.sql  abordagem_repeat_dedup.sql  dedup_new.sql  stg_repeat_names.sql  stg_repeat_names_cluster.sql
queries/models/equipamento/: equipamento.sql  poligonos_rmi.sql  schema.yml
queries/models/equipamentos/: poligonos_rmi.sql  schema.yml  unidade.sql  unidade_schema.yml
queries/models/marts/acolhimento/: _sources.yml  mart_acolhimento.sql  mart_acolhimento.yml  mart_acolhimento_diaria.sql  mart_acolhimento_diaria.yml  mart_meta_acolhimento.sql  mart_meta_acolhimento.yml
queries/models/marts/estrutura_assistencial/: mart_profissionais_unidades.sql  mart_profissionais_unidades.yml
queries/models/marts/pic/: _sources.yml  mart_pic_prontuario_carioca.sql  mart_pic_prontuario_carioca.yml  mart_pic_prontuario_carioca_dev.sql
queries/models/marts/poc_paif/: poc_paif_acompanhamento.sql  poc_paif_acompanhamento.yml
queries/models/marts/risco_social/: mart_familias_indicadores.sql  mart_usuarios_violacoes.sql
queries/models/marts/rma_cras/: demandas_cvs.md  encaminhamentos_unidade.sql  encaminhamentos_unidade.yml  resposta_cvs.md
queries/models/old_architecture/bolsa_familia/: folha.sql
queries/models/old_architecture/dashboard_acolherio/: atendimentos.sql  contas_associadas.sql  lista_unidades.sql
queries/models/old_architecture/dashboard_arcgis/: abordagem.sql  gestao_vagas.sql  schema.yml.disabled
queries/models/old_architecture/pic/: historico_feedback.sql  primeira_infancia_carioca.sql
queries/models/pic/: controle_cas.sql  delta_feedback_controle.sql  delta_feedback_pic.sql  historico_feedback.sql  primeira_infancia_carioca.sql  schema.yml
queries/models/raw/prontuario_carioca_assistencia_social/: _sources.yml  raw_atendimentos_familias.sql  raw_cbo.sql  (+48 more)
queries/models/rma_creas/: bloco1_item_a.sql  bloco1_item_b.sql
queries/seeds/: countries.csv
queries/snapshots/: usuarios_snapshot.yml
queries/tests/: test_cras_item_a_v2.sql  test_evolucao.sql  test_servassist.sql  test_viol_direito.sql  teste_table_base_bloco1_item_a_cras_duplicados.sql  teste_table_base_bloco1_item_a_cras_verificar_famil_paif.sql  validar_acolhidos_2026.sql  validar_capacidade_unidades.sql  validar_meta_acolhimento_2025.sql
queries/tests/dashboard_acolherio/: test_verificar_atendimentos_compartilhados.sql  test_verificar_atendimentos_familia.sql  test_verificar_atendimentos_usuarios.sql  test_verificar_quantidade_atendimentos_compartilhados.sql
queries/tests/fixtures/: contas_administrativas.yml  usuarios_testes.yml
sandbox/elt/: setup_teste_elt.ipynb  setup_teste_elt.py
sandbox/etl/: setup_teste_etl.ipynb
(+92 files in other folders)
