[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipelines-arcgis"
version = "0.1.0"
description = "Pipelines for ArcGIS integration"
requires-python = ">=3.13"
dependencies = [
    "prefect>=3.0.0",
    "pandas>=2.2.0",
    "geopandas>=1.0.0",
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-storage>=2.17.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.30.0",
    "shapely>=2.0.0",
    "prefect-dbt>=0.6.0",
    "dbt-bigquery>=1.8.0",
]

[project.optional-dependencies]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipelines*"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
select = [
    "F", "E", "W", "I001", "I002",
    "UP", "N", "YTT", "ANN", "S",
    "BLE", "FBT", "B", "A", "C4",
    "T10", "EM", "PIE", "TID", "RSE",
    "RET", "SLF", "G", "ERA", "PLE",
    "RUF"
]
ignore = ["ANN101", "ANN102", "ANN204"]
unfixable = ["ERA"]
target-version = "py313"

[tool.ruff.isort]
known-first-party = ["pipelines", "tests"]
force-sort-within-sections = true
